[gd_scene load_steps=10 format=3 uid="uid://dxpcgxyp7fp2a"]

[ext_resource type="Texture2D" uid="uid://chdllyk8hmjn5" path="res://assets/fancy_background.JPG" id="1_xya4t"]
[ext_resource type="Script" uid="uid://yx02dctxcx2c" path="res://scenes/UI/welcome_ui.gd" id="1_y60fg"]
[ext_resource type="Script" uid="uid://cisu3pbbrm588" path="res://scenes/UI/wui_events.gd" id="3_kxsmq"]
[ext_resource type="Texture2D" uid="uid://by6np01aehe4x" path="res://assets/ui/panel/stone-panel-hd2.png" id="3_lfq8m"]
[ext_resource type="FontFile" uid="uid://bdipyov827sdf" path="res://assets/fonts/SedgwickAve-Regular.ttf" id="5_o5ykb"]
[ext_resource type="Theme" uid="uid://b6ja1dfsxjk21" path="res://scenes/UI/theme/global_theme.tres" id="7_i54xn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lfq8m"]
texture = ExtResource("3_lfq8m")
texture_margin_left = 50.0
texture_margin_top = 50.0
texture_margin_right = 50.0
texture_margin_bottom = 50.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxLine" id="StyleBoxLine_kxsmq"]
color = Color(0.9669313, 0.91251427, 0.944138, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4edci"]

[node name="WelcomUI" type="CanvasLayer" node_paths=PackedStringArray("uiEvents")]
script = ExtResource("1_y60fg")
uiEvents = NodePath("events")

[node name="events" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("7_i54xn")
script = ExtResource("3_kxsmq")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(2.4065375e-08, 0.08678458, 0.10858362, 1)

[node name="Panel2" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_lfq8m")

[node name="MarginContainer" type="MarginContainer" parent="Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="HBoxContainer" type="HBoxContainer" parent="Panel2/MarginContainer"]
layout_mode = 2

[node name="Spacer #4" type="Control" parent="Panel2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.5

[node name="Spacer #4" type="Control" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TitleContainer" type="VBoxContainer" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 2.0

[node name="title2" type="Label" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"HeaderMedium"
text = "welcome on "

[node name="title" type="Label" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_type_variation = &"HeaderLarge"
text = "BBTrainer"

[node name="HSeparator" type="HSeparator" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer/TitleContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"HeaderSmall"
text = "please choose an option "

[node name="LineEdit" type="LineEdit" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("7_i54xn")

[node name="Spacer #5" type="Control" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="CreateRoomContainer" type="VBoxContainer" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="roomToCreate" type="LineEdit" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer/CreateRoomContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_fonts/font = ExtResource("5_o5ykb")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxLine_kxsmq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4edci")
placeholder_text = "room name"
alignment = 1
caret_blink = true
caret_force_displayed = true
caret_mid_grapheme = true

[node name="butCtn" type="HBoxContainer" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer/CreateRoomContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer/CreateRoomContainer/butCtn"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"texturedButton"
text = "Back
"

[node name="Spacer #2" type="Control" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer/CreateRoomContainer/butCtn"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="CreateButton" type="Button" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer/CreateRoomContainer/butCtn"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"texturedButton"
text = "Go !
"

[node name="StartContainer" type="HBoxContainer" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="joinRoomButton" type="Button" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer/StartContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"texturedButton"
text = "Join room
"

[node name="Spacer #2" type="Control" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer/StartContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="createRoomButton" type="Button" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer/StartContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"texturedButton"
text = "create room
"

[node name="Spacer #3" type="Control" parent="Panel2/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer #5" type="Control" parent="Panel2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="Panel2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="TextureRect" type="TextureRect" parent="Panel2/MarginContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_xya4t")
expand_mode = 1

[connection signal="pressed" from="Panel2/MarginContainer/HBoxContainer/VBoxContainer/CreateRoomContainer/butCtn/BackButton" to="events" method="activateWelcome"]
[connection signal="pressed" from="Panel2/MarginContainer/HBoxContainer/VBoxContainer/CreateRoomContainer/butCtn/CreateButton" to="." method="_on_create_room_button_pressed"]
[connection signal="button_up" from="Panel2/MarginContainer/HBoxContainer/VBoxContainer/StartContainer/createRoomButton" to="events" method="activateCreateRoom"]
